vlib/v/checker/tests/mod_op_wrong_left_type_err_c.vv
struct Aaa{}
fn main() {
	a := Aaa{}
	println(a % 1)
}
